Added Meet the Animals Page and updated main of Home page

--- a/meettheanimals.html
+++ b/meettheanimals.html
@@ -1,23 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meet the Animals</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&family=Playfair+Display&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="fonts" href="img/Pig Silhouette.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+    <title>Homepage</title>
+
 </head>
+
 <body>
-    <footer>
 
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="meettheanimals.html">Meet the Animals</a>
-        <a href="faqs.html">FAQs</a>
-        <a href="contact.html">Contact</a>
-        <a href="donate.html">Donate</a>
-    </div>
+    <header>
+
+        <nav class="topnav" id="myTopnav">
+            <a href="index.html">Home</a>
+            <a href="meettheanimals.html" class="active">Meet the Animals</a>
+            <a href="faqs.html">FAQs</a>
+            <a href="contact.html">Contact</a>
+            <a href="donate.html">Donate</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+
+            <div class="logo">
+                <img src="img/Maverick's Mission.png">
+            </div>
+
+        </nav>
+
+
+    </header>
+
+    <main>
+
+       
+
+        <div class="hero-meet-the-animals">
+            <H1 class="hero-title">Meet the Animals</H1>
+        </div>         
+
+
+        <article class="the-animals-on-farm">
+            <ul class="list-of-animals">
+                <li><img src="img/Loretta.png">Loretta</img></li>
+                <li><img src="img/Herbert.png">Herbert</img></li>
+                <li><img src="img/Phil.png">Phil</img></li>
+                <li><img src="img/Polly.png">Polly</img></li>
+            </ul>
+
+        </article>   
+
+
+
+        <div class = "button">
+          <a href="https://www.paypal.com/us/home"><span class="donate">DONATE NOW</span></a>
+        </div>
+
+    </main>
+
+
+
+    <footer class="footer">
+
+        <navbar class="navbar">
+            <ul class="navlinks">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="meettheanimals.html">Meet the Animals</a></li>
+                <li><a href="faqs.html">FAQs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="donate.html">Donate</a></li>
+            </ul>
+
+            <div class="social">
+
+                <p class="mission"> Maverick's Mission is a registered 501(c)3 nonprofit. <br>EIN: XX-XXXXXX </p>
+
+                <ul class="fa">
+                    <li><a href="#" class="fa fa-facebook"></a></li>
+                    <li><a href="#" class="fa fa-twitter"></a></li>
+                    <li><a href="#" class="fa fa-instagram"></a></li>
+                </ul>
+
+
+            </div>
+        </navbar>
+
     </footer>
+    <script src="/script.js"></script>
 </body>
-</html>
 
+</html>
+<!--
+<section class="meet-the-animals">
+    <img src="img/Meet the Animals Banner.jpeg" alt="DESRIBES THE IMAGE WELL" style="width:100%;"></img>
+    <div class="text-block">
+        <h2>MEET THE ANIMALS</h2>
+    </div>
+</section>
+-->
