Added flexbox to Meet the Animals page, head/footer to Contact, Donate, FAQs, repositioned Donate button

--- a/meettheanimals.html
+++ b/meettheanimals.html
@@ -53,10 +53,10 @@
 
         <article class="the-animals-on-farm">
             <ul class="list-of-animals">
-                <li><img src="img/Loretta.png">Loretta</img></li>
-                <li><img src="img/Herbert.png">Herbert</img></li>
-                <li><img src="img/Phil.png">Phil</img></li>
-                <li><img src="img/Polly.png">Polly</img></li>
+                <li><img src="img/Loretta.png" alt="The side view of the face of a black and white pif">Loretta</img></li>
+                <li><img src="img/Herbert.png" atl="A frontal view of the face of a white goat with curved horns, long flowy chin hair, and a smirk on his face.">Herbert</img></li>
+                <li><img src="img/Phil.png" alt="The frontal view of a young scruffy-haired pig, brendal in color, smiling for the camera.">Phil</img></li>
+                <li><img src="img/Polly.png" alt="A close-up, front view of a young black and white pig sticking it's pink snout up towards the camera.">Polly</img></li>
             </ul>
 
         </article>   
