Updated Home and Meet the Animals Pages

--- a/faqs.html
+++ b/faqs.html
@@ -117,7 +117,7 @@
 		
 					<div class="social">
 		
-						<p class="mission"> Maverick's Mission is a registered 501(c)3 nonprofit. <br>EIN: XX-XXXXXX </p>
+						<p class="footer-nonprofit-info"> Maverick's Mission is a registered 501(c)3 nonprofit. <br>EIN: XX-XXXXXX </p>
 		
 						<ul class="fa">
 							<li><a href="#" class="fa fa-facebook"></a></li>
