--- a/meettheanimals.html
+++ b/meettheanimals.html
@@ -61,7 +61,14 @@
 
         </article>   
 
+        <article class="animal-description">
+            <p>
+                Maverick's Mission rescues farmed animals that are often victims of cruelty and neglect. 
+                Many of the residents have escaped slaughterhouses, have been rescued from closing farms and auctions, or are surrendered to us. 
+                When we say yes to rescuing an animal, we say yes to providing them love and care for the rest of their life. 
 
+            </p>
+        </article>
 
         <div class = "button">
           <a href="https://www.paypal.com/us/home"><span class="donate">DONATE NOW</span></a>
@@ -84,7 +91,7 @@
 
             <div class="social">
 
-                <p class="mission"> Maverick's Mission is a registered 501(c)3 nonprofit. <br>EIN: XX-XXXXXX </p>
+                <p class="footer-nonprofit-info> Maverick's Mission is a registered 501(c)3 nonprofit. <br>EIN: XX-XXXXXX </p>
 
                 <ul class="fa">
                     <li><a href="#" class="fa fa-facebook"></a></li>
