Change pictures, bug fixes

--- a/faqs.html
+++ b/faqs.html
@@ -1,6 +1,6 @@
 		<!DOCTYPE html>
 		<html lang="en">
-		
+
 		<head>
 			<meta charset="UTF-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,16 +13,16 @@
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 			<link rel="fonts" href="img/Pig Silhouette.png">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		
-		
+
+
 			<title>FAQs</title>
-		
+
 		</head>
-		
+
 		<body>
-		
+
 			<header>
-		
+
 				<nav class="topnav" id="myTopnav">
 					<a href="index.html">Home</a>
 					<a href="meettheanimals.html">Meet the Animals</a>
@@ -32,44 +32,44 @@
 					<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 						<i class="fa fa-bars"></i>
 					</a>
-		
+
 					<div class="logo">
 						<img src="img/Maverick's Mission.png">
 					</div>
-		
+
 				</nav>
-		
-		
+
+
 			</header>
-		
+
 			<main>
-		
-		
+
+
 				<div class="hero-faqs">
 					<H1 class="hero-title">FAQs</H1>
 				</div>
-		
-			
-		
-					
-		
-				<div class = "button">
-				  <a href="https://www.paypal.com/us/home"><span class="donate">DONATE NOW</span></a>
+
+
+
+
+
+				<div class="button">
+					<a href="https://www.paypal.com/us/home"><span class="donate">DONATE NOW</span></a>
 				</div>
-		
-				<aside>       
-		
-		
+
+				<aside>
+
+
 				</aside>
-			  
-		
-		
+
+
+
 			</main>
-		
-		
-		
+
+
+
 			<footer class="footer">
-		
+
 				<navbar class="navbar">
 					<ul class="navlinks">
 						<li><a href="index.html">Home</a></li>
@@ -78,21 +78,23 @@
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="donate.html">Donate</a></li>
 					</ul>
-		
+
 					<div class="social">
-		
-						<p class="footer-nonprofit-info"> Maverick's Mission is a registered 501(c)3 nonprofit. <br>EIN: XX-XXXXXX </p>
-		
+
+						<p class="footer-nonprofit-info"> Maverick's Mission is a registered 501(c)3 nonprofit. <br>EIN:
+							XX-XXXXXX </p>
+
 						<ul class="fa">
 							<li><a href="#" class="fa fa-facebook"></a></li>
 							<li><a href="#" class="fa fa-twitter"></a></li>
 							<li><a href="#" class="fa fa-instagram"></a></li>
 						</ul>
-		
-		
+
+
 					</div>
 				</navbar>
-    </footer>
-    <script src="/script.js"></script>
-</body>
-</html>
+			</footer>
+			<script src="/script.js"></script>
+		</body>
+
+		</html>
