--- a/index.html
+++ b/index.html
@@ -70,63 +70,68 @@
             <h2 class="how-donations-help-header">How do your donations help?</h2>
             <div class="how-donations-help-list-container">
                 <div class="how-donations-help-housing-container">
-                    <img class="donations-housing-img" src="img/Barn Clipart.png" alt="Black and white clipart image of a barn">
-                <h3 class="how-donations-help-item-headers">Housing</h3>
-                <p class="how-donations-help-housing-paragraph">
-                    Your donations allow us to continue to rescue farm animals in need 
-                    and maintain our high standards of care. Every donation, whether 
-                    one-time or recurring, is very important and greatly appreciated. 
-                </p>
-            </div>
-            <div class="how-donations-help-animal-feed-container">
-                <img class="donations-animal-feed-img" src="img/Animal Feed Clipart.png" alt="Black and white clipart image of bags of animal feed">
-                <h3 class="how-donations-help-item-headers">Animal Feed</h3>
-                <p class="how-donations-help-animal-feed-paragraph">
-                    Your donations allow us to continue to rescue farm animals in need 
-                    and maintain our high standards of care. Every donation, whether 
-                    one-time or recurring, is very important and greatly appreciated. 
-                </p>
-            </div>
-                
-            <div class="how-donations-help-medical-container">
-                <img class="donations-medical-img" src="img/Medical Clipart.png" alt="Black and white clipart image of a medical bag with a cross in the middle and a handle at the top.">
-                <h3 class="how-donations-help-item-headers">Medical Care</h3>
-                <p class="how-donations-help-medical-paragraph">
-                    Your donations allow us to continue to rescue farm animals in need 
-                    and maintain our high standards of care. Every donation, whether 
-                    one-time or recurring, is very important and greatly appreciated. 
-                </p>
-            </div>
+                    <img class="donations-housing-img" src="img/Barn Clipart.png"
+                        alt="Black and white clipart image of a barn">
+                    <h3 class="how-donations-help-item-headers">Housing</h3>
+                    <p class="how-donations-help-housing-paragraph">
+                        Your donations allow us to continue to rescue farm animals in need
+                        and maintain our high standards of care. Every donation, whether
+                        one-time or recurring, is very important and greatly appreciated.
+                    </p>
+                </div>
+                <div class="how-donations-help-animal-feed-container">
+                    <img class="donations-animal-feed-img" src="img/Animal Feed Clipart.png"
+                        alt="Black and white clipart image of bags of animal feed">
+                    <h3 class="how-donations-help-item-headers">Animal Feed</h3>
+                    <p class="how-donations-help-animal-feed-paragraph">
+                        Your donations allow us to continue to rescue farm animals in need
+                        and maintain our high standards of care. Every donation, whether
+                        one-time or recurring, is very important and greatly appreciated.
+                    </p>
+                </div>
+
+                <div class="how-donations-help-medical-container">
+                    <img class="donations-medical-img" src="img/Medical Clipart.png"
+                        alt="Black and white clipart image of a medical bag with a cross in the middle and a handle at the top.">
+                    <h3 class="how-donations-help-item-headers">Medical Care</h3>
+                    <p class="how-donations-help-medical-paragraph">
+                        Your donations allow us to continue to rescue farm animals in need
+                        and maintain our high standards of care. Every donation, whether
+                        one-time or recurring, is very important and greatly appreciated.
+                    </p>
+                </div>
             </div>
         </aside>
 
         <article class="who-we-are">
             <div class="who-we-are-words">
-            <h2 class="who-we-are-header">Who We Are</h2>
-            <p class="who-we-are-paragraph">
-                We are Maverick, the pig, and Jennifer, the human.
-                &nbsp;
+                <h2 class="who-we-are-header">Who We Are</h2>
+                <p class="who-we-are-paragraph">
+                    We are Maverick, the pig, and Jennifer, the human.
+                    &nbsp;
 
-                We first met in 2015 when I, Maverick, was just a little piglet.
-                I was in need of a home and my soon-to-be new mom decided to adopt me. <br><br>Little did she know that
-                my seven pound self would spark an enduring love and passion within her, or that over the next
-                seven years, she would slowly become home to over <em> seventy </em> different pigs, goats, and dogs
-                needing a place to call home.
+                    We first met in 2015 when I, Maverick, was just a little piglet.
+                    I was in need of a home and my soon-to-be new mom decided to adopt me. <br><br>Little did she know
+                    that
+                    my seven pound self would spark an enduring love and passion within her, or that over the next
+                    seven years, she would slowly become home to over <em> seventy </em> different pigs, goats, and dogs
+                    needing a place to call home.
 
 
-                <!-- 
+                    <!-- 
         <img class="willis-and-maverick-two" src="img/Willis and Maverick.png" alt="Jennifer and holding the baby pig, Maveric in her arms.  Jennifer has a pink pig outfit on.">
         -->
 
-                Maverick's Mission, named after the one and only (me), was officially started in 2019 as a 501c
-                animal sanctuary.
-                <br><br>
+                    Maverick's Mission, named after the one and only (me), was officially started in 2019 as a 501c
+                    animal sanctuary.
+                    <br><br>
 
-                Although there have been some big changes around here, what has
-                remained the same is my mom's and Maverick's Mission's dedication to providing a quality life and care
-                to animals who are in need of a forever home.
+                    Although there have been some big changes around here, what has
+                    remained the same is my mom's and Maverick's Mission's dedication to providing a quality life and
+                    care
+                    to animals who are in need of a forever home.
 
-            </p>
+                </p>
             </div>
             <img class="willis-and-maverick-one" src="img/Maverick & Willis 3.JPG"
                 alt="Jennifer sitting cross-legged, holding baby Maverick, the pig">
@@ -172,7 +177,7 @@
         </navbar>
 
     </footer>
-    <script src="/script.js"></script>
+    <script src="scripttwo.js"></script>
 </body>
 
 </html>
