--- a/meettheanimals.html
+++ b/meettheanimals.html
@@ -44,34 +44,43 @@
 
     <main>
 
-       
+
 
         <div class="hero-meet-the-animals">
             <H1 class="hero-title">Meet the Animals</H1>
-        </div>         
+        </div>
 
 
         <article class="the-animals-on-farm">
             <ul class="list-of-animals">
-                <li><img src="img/Loretta.png" alt="The side view of the face of a black and white pif">Loretta</img></li>
-                <li><img src="img/Herbert.png" atl="A frontal view of the face of a white goat with curved horns, long flowy chin hair, and a smirk on his face.">Herbert</img></li>
-                <li><img src="img/Phil.png" alt="The frontal view of a young scruffy-haired pig, brendal in color, smiling for the camera.">Phil</img></li>
-                <li><img src="img/Polly.png" alt="A close-up, front view of a young black and white pig sticking it's pink snout up towards the camera.">Polly</img></li>
+                <li><img src="img/Loretta.png" alt="The side view of the face of a black and white pif">Loretta</img>
+                </li>
+                <li><img src="img/Herbert.png"
+                        atl="A frontal view of the face of a white goat with curved horns, long flowy chin hair, and a smirk on his face.">Herbert</img>
+                </li>
+                <li><img src="img/Phil.png"
+                        alt="The frontal view of a young scruffy-haired pig, brendal in color, smiling for the camera.">Phil</img>
+                </li>
+                <li><img src="img/Polly.png"
+                        alt="A close-up, front view of a young black and white pig sticking it's pink snout up towards the camera.">Polly</img>
+                </li>
             </ul>
 
-        </article>   
+        </article>
 
         <article class="animal-description">
             <p>
-                Maverick's Mission rescues farmed animals that are often victims of cruelty and neglect. 
-                Many of the residents have escaped slaughterhouses, have been rescued from closing farms and auctions, or are surrendered to us. 
-                When we say yes to rescuing an animal, we say yes to providing them love and care for the rest of their life. 
+                Maverick's Mission rescues farmed animals that are often victims of cruelty and neglect.
+                Many of the residents have escaped slaughterhouses, have been rescued from closing farms and auctions,
+                or are surrendered to us.
+                When we say yes to rescuing an animal, we say yes to providing them love and care for the rest of their
+                life.
 
             </p>
         </article>
 
-        <div class = "button">
-          <a href="https://www.paypal.com/us/home"><span class="donate">DONATE NOW</span></a>
+        <div class="button">
+            <a href="https://www.paypal.com/us/home"><span class="donate">DONATE NOW</span></a>
         </div>
 
     </main>
@@ -91,13 +100,13 @@
 
             <div class="social">
 
-                <p class="footer-nonprofit-info> Maverick's Mission is a registered 501(c)3 nonprofit. <br>EIN: XX-XXXXXX </p>
+                <p class="footer-nonprofit-info"> Maverick's Mission is a registered 501(c)3 nonprofit.<br>EIN: XX-XXXXXX </p>
 
-                <ul class="fa">
+                <ul class=" fa">
                     <li><a href="#" class="fa fa-facebook"></a></li>
                     <li><a href="#" class="fa fa-twitter"></a></li>
                     <li><a href="#" class="fa fa-instagram"></a></li>
-                </ul>
+                    </ul>
 
 
             </div>
