Cleaned up the codeand connected Javascript to all pages

--- a/faqs.html
+++ b/faqs.html
@@ -24,12 +24,12 @@
 			<header>
 
 				<nav class="topnav" id="myTopnav">
-					<a href="index.html">Home</a>
+					<a href="index.html" class="active">Home</a>
 					<a href="meettheanimals.html">Meet the Animals</a>
-					<a href="faqs.html" class="active">FAQs</a>
+					<a href="faqs.html">FAQs</a>
 					<a href="contact.html">Contact</a>
 					<a href="donate.html">Donate</a>
-					<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+					<a href="#" class="icon hamburger-button">
 						<i class="fa fa-bars"></i>
 					</a>
 
@@ -94,7 +94,7 @@
 					</div>
 				</navbar>
 			</footer>
-			<script src="/script.js"></script>
+			<script src="script.js"></script>
 		</body>
 
 		</html>
