--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="faqs.html">FAQs</a>
             <a href="contact.html">Contact</a>
             <a href="donate.html">Donate</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <a href="#" class="icon hamburger-button">
                 <i class="fa fa-bars"></i>
             </a>
 
@@ -138,14 +138,14 @@
 
 
         </article>
-
+        <!--
         <aside class="new-farm">
             <h2 class="new-farm-header">Check out the new dig!</h2>
             <p class="new-farm-paragraph">
                 Built in 2021, Maverick's Mission upgraded their territory!
             </p>
         </aside>
-
+        -->
     </main>
 
 
@@ -177,7 +177,7 @@
         </navbar>
 
     </footer>
-    <script src="scripttwo.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
