--- a/meettheanimals.html
+++ b/meettheanimals.html
@@ -24,12 +24,12 @@
     <header>
 
         <nav class="topnav" id="myTopnav">
-            <a href="index.html">Home</a>
-            <a href="meettheanimals.html" class="active">Meet the Animals</a>
+            <a href="index.html" class="active">Home</a>
+            <a href="meettheanimals.html">Meet the Animals</a>
             <a href="faqs.html">FAQs</a>
             <a href="contact.html">Contact</a>
             <a href="donate.html">Donate</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <a href="#" class="icon hamburger-button">
                 <i class="fa fa-bars"></i>
             </a>
 
@@ -100,20 +100,21 @@
 
             <div class="social">
 
-                <p class="footer-nonprofit-info"> Maverick's Mission is a registered 501(c)3 nonprofit.<br>EIN: XX-XXXXXX </p>
+                <p class="footer-nonprofit-info"> Maverick's Mission is a registered 501(c)3 nonprofit.<br>EIN:
+                    XX-XXXXXX </p>
 
                 <ul class=" fa">
                     <li><a href="#" class="fa fa-facebook"></a></li>
                     <li><a href="#" class="fa fa-twitter"></a></li>
                     <li><a href="#" class="fa fa-instagram"></a></li>
-                    </ul>
+                </ul>
 
 
             </div>
         </navbar>
 
     </footer>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
